refactor: 불필요한 내용, 중복 내용 변경